--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			#particles-js {
 				width: 100%;
 				height: 100%;
-				background-color: #b61924;
+				background-color: black;
 				background-size: 100% 100%;
 				background-position: center;
 				background-repeat: no-repeat;
