--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			}
 	</style>
 	<body  id="particles-js">
-	       <p style="font-size:20px">赵文成赵老板</p>
+	       <p style="font-size:20px;color:red;">赵文成赵老板</p>
 		<script src="./js/particles/particles.js"></script> 
 		<script src="./js/particles/app.js"></script>
 	</body>
